[package]
name = "sidetree"
version = "0.4.0"
authors = ["Tobias Pisani <topisani@hamsterpoison.com>"]
edition = "2018"
description = "TUI file tree for usage with terminal text editors"
license = "MIT"
homepage = "https://github.com/topisani/sidetree"

[dependencies]
tui = "0.14"
termion = "1.5"
unicode-width = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
combine = "4.5.2"
clap = "3.0.0-beta.2"
xdg = "2.2.0"
path-absolutize = "3.0.10"
lazy_static = "1.4.0"
toml = "0.5.8"
