[package]
name = "sidetree"
version = "0.8.2"
authors = ["Tobias Pisani <topisani@hamsterpoison.com>"]
edition = "2018"
description = "TUI file tree for usage with terminal text editors"
license = "MIT"
homepage = "https://github.com/topisani/sidetree"

[dependencies]
tui = { version = "0.19.0", default-features = false, features = ["termion"]}
termion = "1.5.6"
unicode-width = "0.1.9"
serde = { version = "1.0.144", features = ["derive"] }
combine = "4.6.6"
clap = { version = "3.2.17", features = ["derive"] }
xdg = "2.4.1"
path-absolutize = "3.0.13"
lazy_static = "1.4.0"
toml = "0.5.9"
syn = "1.0.99"
quote = "1.0.21"
proc-macro2 = "1.0.43"
tui-textarea = { version = "0.2.0", default-features = false, features = ["termion"] }

# https://stackoverflow.com/questions/65813638/how-to-use-proc-macro-in-normal-module
[lib]
name = "config_macros"
path = "src/config_macros.rs"
proc-macro = true

[[bin]]
name = "sidetree"
path = "src/main.rs"

[package.metadata.release]
dev-version-ext = "dev"
pre-release-commit-message = "release {{version}}"
post-release-commit-message = "Released {{version}}, starting {{next_version}}"
